<resources>
    <string name="app_name">Dagger and Compose</string>
    <string name="setup_stage">%s setup stage in %s</string>
    <string name="exception_null_app_container_fragment">Application container fragment can\'t be null in current stage</string>

    <string name="unexpected_server_error">Unexpected server error</string>
    <string name="unexpected_network_error">Unexpected network error</string>
    <string name="unable_to_communicate_to_server">Unable to communicate to server</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="parentheses">(%s)</string>
    <string name="house">Hogwarts House: %s</string>
    <string name="birthday">Birthday: %s</string>
    <string name="dataError">Can\'t Load Data</string>
    <string name="hogwarts_houses">Hogwarts Houses</string>
    <string name="founder">Founder</string>
    <string name="colors">Colors</string>
    <string name="animal">Animal</string>
    <string name="subscription">Subscription</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
</resources>