<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ambiws.daggerandcompose.core.view.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Username" />

    <TextView
        android:id="@+id/tvSubscription"
        style="@style/TextClassic14"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_bottom_separator"
        android:drawableStart="@drawable/ic_sub24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/subscription"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar" />

    <TextView
        android:id="@+id/tvSettings"
        style="@style/TextClassic14"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_bottom_separator"
        android:drawableStart="@drawable/ic_settings24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubscription" />

    <TextView
        android:id="@+id/tvEdit"
        style="@style/TextClassic14"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_bottom_separator"
        android:drawableStart="@drawable/ic_edit24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="Edit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings" />

    <TextView
        android:id="@+id/tvNotifications"
        style="@style/TextClassic14"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_bottom_separator"
        android:drawableStart="@drawable/ic_notification24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/notifications"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEdit" />

    <TextView
        android:id="@+id/tvAbout"
        style="@style/TextClassic14"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/bg_bottom_separator"
        android:drawableStart="@drawable/ic_about24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:text="@string/about"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotifications" />
</androidx.constraintlayout.widget.ConstraintLayout>