<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/snow_white"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="136dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/ivList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <TextView
        android:id="@+id/tvHome"
        style="@style/TextSecondary14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="@+id/ivHome"
        app:layout_constraintStart_toStartOf="@+id/ivHome"
        app:layout_constraintTop_toBottomOf="@+id/ivHome" />

    <ImageView
        android:id="@+id/ivList"
        android:layout_width="136dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/ivProfile"
        app:layout_constraintStart_toEndOf="@+id/ivHome"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_list" />

    <TextView
        android:id="@+id/tvList"
        style="@style/TextSecondary14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/list"
        app:layout_constraintEnd_toEndOf="@+id/ivList"
        app:layout_constraintStart_toStartOf="@+id/ivList"
        app:layout_constraintTop_toBottomOf="@+id/ivList" />

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="136dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivList"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_profile" />

    <TextView
        android:id="@+id/tvProfile"
        style="@style/TextSecondary14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="@+id/ivProfile"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile" />
</androidx.constraintlayout.widget.ConstraintLayout>
