<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHouse"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            tools:text="Gryffindor" />

        <TextView
            android:id="@+id/tvHouseEmoji"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="🦁" />

        <TextView
            android:id="@+id/tvFounderTitle"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/founder"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvFounder"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Godric Gryffindor" />

        <TextView
            android:id="@+id/tvColorsTitle"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/colors"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvColors"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Red, Gold" />

        <TextView
            android:id="@+id/tvAnimalTitle"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/animal"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAnimal"
            style="@style/TextClassic14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            tools:text="Lion" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>